@@ -1,3 +1,6 @@
+Changelog 0.3.52 [20230315]:
+- Fixed a small bug with Playing Next Dialog
+
 Changelog 0.3.51 [20230314]:
 - Fixed a major bug with the Playing Next Dialog
 
